--- a/RaceCar/appsettings.json
+++ b/RaceCar/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "Kafka": {
     "BootstrapServers": "localhost:9092"
+  },
+  "UseSelfTransactionProcessor": true,
+  "ServiceDiscoveryConfig":{
+    "Id": "race",
+    "Name": "race",
+    "Host": "localhost",
+    "Port": 7057
   }
 }
