--- a/RaceCar/RaceCar.csproj
+++ b/RaceCar/RaceCar.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="2.4.0" />
+        <PackageReference Include="Consul" Version="1.7.14.4" />
         <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
